restyle the background headers
to fit without the garlands

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div id="itinerary" class="section">
-      <h1 class="header-background">Itinerary</h1>
+      <h1 class="header-background white">Itinerary</h1>
       <div class="column no-padding">
         <h1>Itinerary</h1>
       </div>
@@ -105,7 +105,7 @@
     </div>
 
     <div id="travel" class="section light-background">
-      <h1 class="header-background white">Travel</h1>
+      <h1 class="header-background">Travel</h1>
       <div class="column no-padding">
         <h1>Travel</h1>
       </div>
@@ -154,7 +154,7 @@
     </div>
 
     <div id="gr" class="section">
-      <h1 class="header-background">Grand Rapids</h1>
+      <h1 class="header-background white">Grand Rapids</h1>
       <div class="column no-padding">
         <h1>Grand Rapids</h1>
       </div>
@@ -324,7 +324,7 @@
     </div>
 
     <div id="photos" class="section light-background">
-      <h1 class="header-background white">Photos</h1>
+      <h1 class="header-background">Photos</h1>
       <div class="column no-padding">
         <h1>Photos</h1>
       </div>
