--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
           <h3>
             Courtyard by Marriott Downtown Grand Rapids<br />11 Monroe Ave NW<br />Grand Rapids, MI 49503
           </h3>
-          <p class="align-text-justify">
-            We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. Please use the name <strong>"Gosser"</strong> in order to book the room at the discounted rate.
+          <p>
+            We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. Please use the name <strong>Gosser</strong> in order to book the room at the discounted rate.
             <a
               href=""
               target="_blank"
               >Link</a
             >
             <br />
-            <strong>Note that you have until May 8 to book a room at the discounted rate.</strong>
+            <strong>Note that you have until May 6 to book a room at the discounted rate.</strong>
           </p>
         </div>
         <div class="column pink-outline">
           <img src="assets\images\Airplane.png" class="icon" alt="icon" />
           <h2>Flights</h2>
           <h3>Grand Rapids, MI<br />GRR</h3>
-          <p class="align-text-justify">
+          <p>
             Gerald R Ford International Airport (GRR) is where you should look
             to fly into. We like to use
             <a
@@ -146,7 +146,7 @@
         <div class="column orange-outline">
           <img src="assets\images\___.png" class="icon" alt="" />
           <h2>Uber / Lyft</h2>
-          <p class="align-text-justify">
+          <p>
             We recommend using Uber or Lyft rather than renting a car. It shouldn’t be difficult to find rides from the airport to downtown.
           </p>
         </div>
@@ -169,6 +169,7 @@
           <a
             href="https://foundersbrewing.com/"
             target="_blank"
+            class="flex-grow"
             >foundersbrewing.com</a
           >
           <a
@@ -184,7 +185,10 @@
             alt=""
           />
           <h2>New Holland</h2>
-          <a href="https://www.newhollandbrew.com/location/grand-rapids/" target="_blank"
+          <a 
+            href="https://www.newhollandbrew.com/location/grand-rapids/" 
+            target="_blank"
+            class="flex-grow"
             >www.newhollandbrew.com</a
           >
           <a
@@ -202,6 +206,7 @@
           <a
             href="https://www.jollypumpkin.com/jp/grand-rapids-brewery"
             target="_blank"
+            class="flex-grow"
             >www.jollypumpkin.com</a
           >
           <a
@@ -223,6 +228,7 @@
           <a
             href="https://www.thelittlebirdgr.com/"
             target="_blank"
+            class="flex-grow"
             >www.thelittlebirdgr.com</a
           >
           <a
@@ -240,7 +246,8 @@
           <h2>Rockwell Republic</h2>
           <a href="https://rockwellrepublic.com/" 
             target="_blank"
-            >rockwellrepublic.com/</a
+            class="flex-grow"
+            >rockwellrepublic.com</a
           >
           <a
             class="button orange"
@@ -258,6 +265,7 @@
           <a
             href="https://www.sanchezbistro.com/"
             target="_blank"
+            class="flex-grow"
             >www.sanchezbistro.com</a
           >
           <a
@@ -296,6 +304,7 @@
           <h2>Grand Rapids Art Museum</h2>
           <a href="https://www.artmuseumgr.org/" 
             target="_blank"
+            class="flex-grow"
             >www.artmuseumgr.org</a
           >
           <a
@@ -311,6 +320,7 @@
           <a
             href="http://www.thebob.com/"
             target="_blank"
+            class="flex-grow"
             >www.thebob.com</a
           >
           <a
@@ -400,7 +410,7 @@
           <h2>Question</h2>
           <h3>Are Kids Invited?</h3>
           <h2>Answer</h2>
-          <p class="align-text-justify">
+          <p>
             We love your kids, but we really want our reception to be your night off! We have a fun, boozy night planned for you.
           </p>
         </div>
@@ -410,7 +420,7 @@
             What is the dress code?
           </h3>
           <h2>Answer</h2>
-          <p class="align-text-justify">
+          <p>
             This is a fairly casual reception. Please dress nice, but don’t worry about being too done up. We will be drinking and playing games all night. 
           </p>
         </div>
@@ -418,7 +428,7 @@
           <h2>Question</h2>
           <h3>Can I bring a date?</h3>
           <h2>Answer</h2>
-          <p class="align-text-justify">
+          <p>
             Yes, please feel free to bring a guest.
           </p>
         </div>
@@ -426,7 +436,7 @@
           <h2>Question</h2>
           <h3>Where/When did you get Married?</h3>
           <h2>Answer</h2>
-          <p class="align-text-justify">
+          <p>
             We are getting married in St Thomas, USVI on May 9, 2020! We wanted a small, private ceremony with the ability to celebrate with all of our friends and family after. We can’t wait to celebrate with all of you!
           </p>
         </div>
