--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="assets\css\styles.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Great+Vibes|Kristi|Nunito+Sans|Unica+One&display=swap"
+      href="https://fonts.googleapis.com/css?family=Great+Vibes|Kristi|Nunito+Sans:300,400,600,700,800|Unica+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -93,10 +93,14 @@
         We are excited to host a reception to celebrate with all of you! The Reception is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual reception - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
       </p>
       <div class="row">
-        <div class="column orange-background">
+        <div class="column orange-outline" style="flex-basis: auto; flex: none;">
           <h2>Reception</h2>
           <h3>Saturday, June 6, 2020<br />7:30 PM</h3>
-          <img src="assets\images\kelsie&raf_withtype.png" class="icon" alt="icon" />
+          <img 
+            src="assets\images\kelsie&raf_withtype.png" 
+            class="icon" 
+            alt=""
+          />
           <p>
             Grand Rapids Brewing Company<br />1 Ionia Ave SW<br />Grand Rapids, MI 49503
           </p>
@@ -115,7 +119,7 @@
           <img src="assets\images\__.png" class="icon" alt="" />
           <h2>Hotels</h2>
           <h3>
-            Courtyard by Marriott Downtown Grand Rapids<br />11 Monroe Ave NW<br />Grand Rapids, MI 49503
+            Courtyard by Marriott Downtown<br />11 Monroe Ave NW<br />Grand Rapids, MI 49503
           </h3>
           <p>
             We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. Please use the name <strong>Gosser</strong> in order to book the room at the discounted rate.
@@ -193,7 +197,7 @@
           >
           <a
             class="button pink"
-            href=""
+            href="https://www.google.com/maps/place/New+Holland+Brewing+-+The+Knickerbocker/@42.9707644,-85.6819931,17z/data=!3m1!4b1!4m5!3m4!1s0x8819add6c5c0a30b:0x532ebcc186310f45!8m2!3d42.9707644!4d-85.6798044"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
@@ -211,7 +215,25 @@
           >
           <a
             class="button red"
-            href=""
+            href="https://www.google.com/maps/place/Jolly+Pumpkin+Pizzeria+%26+Brewery/@42.9704792,-85.682422,17z/data=!3m1!4b1!4m5!3m4!1s0x8819add6db305f29:0x568753e3b53601eb!8m2!3d42.9704792!4d-85.6802333"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column red-outline">
+          <img  
+            src="assets\images\kyryll-ushakov-flENqflm6xU-unsplash.jpg" 
+            alt="" />
+          <h2>Brewery Vivant</h2>
+          <a
+            href="https://www.breweryvivant.com/"
+            target="_blank"
+            class="flex-grow"
+            >www.breweryvivant.com</a
+          >
+          <a
+            class="button red"
+            href="https://www.google.com/maps/place/Brewery+Vivant/@42.9597977,-85.6483288,17z/data=!3m1!4b1!4m5!3m4!1s0x8819ada11a4ddfb9:0x663cc10526c23d84!8m2!3d42.9597977!4d-85.6461401"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
@@ -233,12 +255,31 @@
           >
           <a
             class="button red"
-            href=""
+            href="https://www.google.com/maps/place/Little+Bird/@42.9648208,-85.6722269,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc6ed307e93:0x3f13e1752e489dd4!8m2!3d42.9648208!4d-85.6700382"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
         </div>
         <div class="column orange-outline">
+          <img 
+            src="assets\images\scott-warman-CPuegm6VZ6U-unsplash.jpg" 
+            alt="" 
+          />
+          <h2>New Hotel Mertens</h2>
+          <a
+            href="https://www.newhotelmertens.com/"
+            target="_blank"
+            class="flex-grow"
+            >www.newhotelmertens.com</a
+          >
+          <a
+            class="button orange"
+            href="https://www.google.com/maps?q=new+hotel+mertens+grand+rapids&rlz=1C1GGRV_enUS789US789&safe=active&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiVxt_v4-_nAhUWbc0KHdyWCq0Q_AUoA3oECBAQBQ"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column pink-outline">
           <img
             src="assets\images\kamil-kalbarczyk-19Ft3QfakMo-unsplash.jpg"
             alt=""
@@ -250,13 +291,13 @@
             >rockwellrepublic.com</a
           >
           <a
-            class="button orange"
-            href=""
+            class="button pink"
+            href="https://www.google.com/maps/place/Rockwell+Republic/@42.9618299,-85.6703582,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc1482f8f53:0xd757924bdbf1d836!8m2!3d42.9618299!4d-85.6681695"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
         </div>
-        <div class="column pink-outline">
+        <div class="column purple-outline">
           <img 
             src="assets\images\maddi-bazzocco-cVmNIJCa1XA-unsplash.jpg" 
             alt="" 
@@ -269,8 +310,85 @@
             >www.sanchezbistro.com</a
           >
           <a
+            class="button purple"
+            href="https://www.google.com/maps/place/San+Chez+A+Tapas+Bistro/@42.963102,-85.6717497,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc419bfffc1:0x63231ba8be966000!8m2!3d42.963102!4d-85.669561"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+      </div>
+      <div class="row">
+        <div class="column pink-outline">
+          <img
+            src="assets\images\chad-montano-lP5MCM6nZ5A-unsplash.jpg"
+            alt=""
+          />
+          <h2>Donkey Taqueria</h2>
+          <a
+            href="https://www.donkeygr.com/"
+            target="_blank"
+            class="flex-grow"
+            >www.donkeygr.com</a
+          >
+          <a
             class="button pink"
-            href=""
+            href="https://www.google.com/maps/place/Donkey+Taqueria/@42.955882,-85.6542157,17z/data=!3m1!4b1!4m5!3m4!1s0x8819ad986e4ec88b:0xd1417b32c779f26d!8m2!3d42.955882!4d-85.652027"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column purple-outline">
+          <img 
+            src="assets\images\emerson-vieira-lanootd2FcU-unsplash.jpg" 
+            alt="" 
+          />
+          <h2>Butcher's Union</h2>
+          <a
+            href="https://www.butchersuniongr.com/"
+            target="_blank"
+            class="flex-grow"
+            >www.butchersuniongr.com</a
+          >
+          <a
+            class="button purple"
+            href="https://www.google.com/maps/place/Butcher's+Union/@42.9704738,-85.6826912,17z/data=!3m1!4b1!4m5!3m4!1s0x8819add6c334b0bb:0x931d4981cd723735!8m2!3d42.9704738!4d-85.6805025"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column red-outline">
+          <img
+            src="assets\images\liubov-ilchuk-_qZOwG2oaj4-unsplash.jpg"
+            alt=""
+          />
+          <h2>Bistro Bella Vita</h2>
+          <a href="https://bistrobellavita.com/" 
+            target="_blank"
+            class="flex-grow"
+            >bistrobellavita.com</a
+          >
+          <a
+            class="button red"
+            href="https://www.google.com/maps/place/Bistro+Bella+Vita/@42.961856,-85.6753567,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc35c1a7a23:0xfe29a9fa44bec9b6!8m2!3d42.961856!4d-85.673168"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column orange-outline">
+          <img 
+            src="assets\images\igor-rand-4LZPmKbgQiQ-unsplash.jpg" 
+            alt="" 
+          />
+          <h2>The Green Well</h2>
+          <a
+            href="https://thegreenwell.com/"
+            target="_blank"
+            class="flex-grow"
+            >thegreenwell.com</a
+          >
+          <a
+            class="button orange"
+            href="https://www.google.com/maps/place/The+Green+Well/@42.959349,-85.6485939,17z/data=!3m1!4b1!4m5!3m4!1s0x8819ada1105f8887:0xd8d2fea44d895e3c!8m2!3d42.959349!4d-85.6464052"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
@@ -283,20 +401,39 @@
             src="assets\images\aaron-burden-lFIzHpNbqq0-unsplash.jpg"
             alt=""
           />
-          <h2>Frederick Meijer Gardens & Sculpture Park</h2>
+          <h2>Frederick Meijer Gardens</h2>
           <a
             href="https://www.meijergardens.org/"
             target="_blank"
+            class="flex-grow"
             >www.meijergardens.org</a
           >
           <a
             class="button orange"
-            href=""
+            href="https://www.google.com/maps/place/Frederik+Meijer+Gardens/@42.9795,-85.5878276,17z/data=!3m1!4b1!4m5!3m4!1s0x881853239d44fcb9:0x5ee5df4ee49fe7d5!8m2!3d42.9795!4d-85.5856389"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
         </div>
         <div class="column red-outline">
+          <img
+            src="assets\images\roman-kraft-P8zDQz8Y2Vc-unsplash.jpg"
+            alt=""
+          />
+          <h2>Downtown Market</h2>
+          <a href="http://downtownmarketgr.com/" 
+            target="_blank"
+            class="flex-grow"
+            >downtownmarketgr.com</a
+          >
+          <a
+            class="button red"
+            href="https://www.google.com/maps/place/Downtown+Market+Grand+Rapids/@42.9546035,-85.6724781,17z/data=!3m1!4b1!4m5!3m4!1s0x8819ade9a3eb1175:0x5fdc72ab47e60111!8m2!3d42.9546035!4d-85.6702894"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column pink-outline">
           <img
             src="assets\images\ian-dooley-ZLBzMGle-nE-unsplash.jpg"
             alt=""
@@ -308,8 +445,8 @@
             >www.artmuseumgr.org</a
           >
           <a
-            class="button red"
-            href=""
+            class="button pink"
+            href="https://www.google.com/maps/place/Grand+Rapids+Art+Museum/@42.965006,-85.6732398,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc5a8cb8653:0xd8cb9dc2b679fa0e!8m2!3d42.965006!4d-85.6710511"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
@@ -325,7 +462,7 @@
           >
           <a
             class="button purple"
-            href=""
+            href="https://www.google.com/maps/place/The+B.O.B./@42.9635139,-85.6748887,17z/data=!3m1!4b1!4m5!3m4!1s0x8819adc4c270b15d:0xdde4aad83aedf68b!8m2!3d42.9635139!4d-85.6727"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
