add header information
and change from reception to wedding celebration

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
     </div>
 
     <div id="home" class="section light-background">
-      <header></header>
+      <header>
+        <div class="header-background-color">
+          <div class="header-main">We're Eloping!</div>
+          <div class="header-first">Kelsie & Rafael</div>
+          <div class="header-last">Gosser</div>
+          <div class="header-sub">Join us for our Wedding Celebration</div>
+        </div>
+      </header>
       <div class="row">
         <div class="column">
           <h2>June 6</h2>
@@ -90,11 +97,11 @@
         <h1>Itinerary</h1>
       </div>
       <p>
-        We are excited to host a reception to celebrate with all of you! The Reception is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual reception - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
+        We are excited to host a wedding celebration to celebrate with all of you! The party is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual party - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
       </p>
       <div class="row">
         <div class="column orange-outline" style="flex-basis: auto; flex: none;">
-          <h2>Reception</h2>
+          <h2>Wedding Celebration</h2>
           <h3>Saturday, June 6, 2020<br />7:30 PM</h3>
           <img 
             src="assets\images\kelsie&raf_withtype.png" 
