--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kelsie & Rafael Reception</title>
+    <title>Kelsie & Rafael's Wedding Celebration</title>
     <link
       rel="shortcut icon"
       href="assets\images\BirdOfParadise_favicon.png"
@@ -97,7 +97,7 @@
         <h1>Itinerary</h1>
       </div>
       <p>
-        We are excited to host a wedding celebration to celebrate with all of you! The party is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual party - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
+        Join us in celebrating our marriage! The party is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual party - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
       </p>
       <div class="row">
         <div class="column orange-outline" style="flex-basis: auto; flex: none;">
@@ -129,12 +129,17 @@
             Courtyard by Marriott Downtown<br />11 Monroe Ave NW<br />Grand Rapids, MI 49503
           </h3>
           <p>
-            We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. Please use the name <strong>Gosser</strong> in order to book the room at the discounted rate.
+            We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. 
+            <br />
             <a
-              href=""
+              href="https://book.passkey.com/e/50085058?utm_source=3416832&utm_medium=email&utm_campaign=286198213&trkid=533515908&linkid=2224615188"
               target="_blank"
-              >Link</a
+              >Book room online.</a
             >
+            <br />
+            <br />
+            If you prefer to book via phone, call 877-901-6632 and use group name <strong>Stevenson-Gosser Wedding</strong>.
+            <br />
             <br />
             <strong>Note that you have until May 6 to book a room at the discounted rate.</strong>
           </p>
@@ -144,21 +149,20 @@
           <h2>Flights</h2>
           <h3>Grand Rapids, MI<br />GRR</h3>
           <p>
-            Gerald R Ford International Airport (GRR) is where you should look
-            to fly into. We like to use
+            Gerald R Ford International Airport (GRR) is where you should fly into. We like to use
             <a
               href="https://www.google.com/flights?hl=en#flt=/m/0ftxw.GRR.2020-06-05*GRR./m/0ftxw.2020-06-07;c:USD;e:1;sd:1;t:f"
               target="_blank"
               >Google Flights</a
             >
-            to track flight prices and see prices from various airlines.
+            to track flights and see prices from various airlines.
           </p>
         </div>
         <div class="column orange-outline">
           <img src="assets\images\___.png" class="icon" alt="" />
           <h2>Uber / Lyft</h2>
           <p>
-            We recommend using Uber or Lyft rather than renting a car. It shouldn’t be difficult to find rides from the airport to downtown.
+            We recommend using <a href="https://www.uber.com/" target="_blank">Uber</a> or <a href="https://www.lyft.com" target="_blank">Lyft</a> rather than renting a car. It shouldn’t be difficult to find rides from the airport to downtown.
           </p>
         </div>
       </div>
@@ -227,7 +231,7 @@
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
           >
         </div>
-        <div class="column red-outline">
+        <div class="column orange-outline">
           <img  
             src="assets\images\kyryll-ushakov-flENqflm6xU-unsplash.jpg" 
             alt="" />
@@ -239,7 +243,7 @@
             >www.breweryvivant.com</a
           >
           <a
-            class="button red"
+            class="button orange"
             href="https://www.google.com/maps/place/Brewery+Vivant/@42.9597977,-85.6483288,17z/data=!3m1!4b1!4m5!3m4!1s0x8819ada11a4ddfb9:0x663cc10526c23d84!8m2!3d42.9597977!4d-85.6461401"
             target="_blank"
             ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
@@ -526,7 +530,7 @@
       <div class="column no-padding">
         <h1>Countdown</h1>
       </div>
-      <p>Countdown until the reception!</p>
+      <p>Countdown until the wedding celebration!</p>
       <div class="row nowrap">
         <div class="column purple-background">
           <div id="countdown-days" class="large-text"></div>
@@ -555,7 +559,7 @@
           <h3>Are Kids Invited?</h3>
           <h2>Answer</h2>
           <p>
-            We love your kids, but we really want our reception to be your night off! We have a fun, boozy night planned for you.
+            We love your kids, but we really want our celebration to be your night off! We have a fun, boozy night planned for you.
           </p>
         </div>
         <div class="column red-outline">
@@ -565,7 +569,7 @@
           </h3>
           <h2>Answer</h2>
           <p>
-            This is a fairly casual reception. Please dress nice, but don’t worry about being too done up. We will be drinking and playing games all night. 
+            This is a fairly casual celebration. Please dress nice, but don’t worry about being too done up. We will be drinking and playing games all night. 
           </p>
         </div>
         <div class="column pink-outline">
