change itinerary to details
and fill in the details

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="assets\images\K&R.png" class="nav-image" alt="K & R" />
       <ul class="no-list-style">
         <a href="#home" class="active-nav"><li>Home</li></a>
-        <a href="#itinerary"><li>Itinerary</li></a>
+        <a href="#details"><li>Details</li></a>
         <a href="#travel"><li>Travel</li></a>
         <a href="#gr"><li>Grand Rapids</li></a>
         <a href="#photos"><li>Photos</li></a>
@@ -53,7 +53,7 @@
       <p class="nav-header">Kelsie & Rafael</p>
       <ul class="no-list-style">
         <a href="#home"><li>Home</li></a>
-        <a href="#itinerary"><li>Itinerary</li></a>
+        <a href="#details"><li>Details</li></a>
         <a href="#travel"><li>Travel</li></a>
         <a href="#gr"><li>Grand Rapids</li></a>
         <a href="#photos"><li>Photos</li></a>
@@ -91,25 +91,90 @@
       </div>
     </div>
 
-    <div id="itinerary" class="section">
-      <h1 class="header-background white">Itinerary</h1>
+    <div id="details" class="section">
+      <h1 class="header-background white">Details</h1>
       <div class="column no-padding">
-        <h1>Itinerary</h1>
+        <h1>Details</h1>
       </div>
       <p>
-        Join us in celebrating our marriage! The party is on Saturday, June 6, 2020. We will have an open bar with plenty of food to snack on throughout the night. This will be a fairly casual party - dancing is not required, although welcome. There is a game room, so bring your game face! We look forward to visiting and celebrating with all of you.
+        Join us in celebrating our marriage! The party is on Saturday, June 6,
+        2020. We will have an open bar with plenty of food to snack on
+        throughout the night. This will be a fairly casual party - dancing is
+        not required, although welcome. There is a game room, so bring your game
+        face! We look forward to celebrating with all of you.
       </p>
       <div class="row">
-        <div class="column orange-outline" style="flex-basis: auto; flex: none;">
+        <div
+          class="column orange-outline"
+          style="flex-basis: auto; flex: none;"
+        >
           <h2>Wedding Celebration</h2>
           <h3>Saturday, June 6, 2020<br />7:30 PM</h3>
-          <img 
-            src="assets\images\kelsie&raf_withtype.png" 
-            class="icon" 
+          <img
+            src="assets\images\kelsie&raf_withtype.png"
+            class="icon"
             alt=""
           />
           <p>
-            Grand Rapids Brewing Company<br />1 Ionia Ave SW<br />Grand Rapids, MI 49503
+            Grand Rapids Brewing Company<br />1 Ionia Ave SW<br />Grand Rapids,
+            MI 49503
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column purple-background">
+          <h2>Parking</h2>
+          <p class="left-align">
+            Parking is available at several locations near Grand Rapids Brewing
+            Co. You can find the best prices using
+            <a
+              href="https://www.bestparking.com/grand-rapids-mi-parking/destinations/the-factory-parking/?start=2020-06-06T19%3A30%3A00-04%3A00&end=2020-06-06T23%3A00%3A00-04%3A00&daily=1"
+              target="_blank"
+              class="dark-link"
+              >BestParking</a
+            >
+            or
+            <a
+              href="https://en.parkopedia.com/parking/locations/grand_rapids_brewing_company_1_ionia_ave_sw_grand_rapids_michigan_49503_united_states_of_america_dpeh6t0wj59/?arriving=202006061930&leaving=202006062300"
+              target="_blank"
+              class="dark-link"
+              >Parkopedia</a
+            >.
+          </p>
+          <p class="left-align">
+            The closest parking ramp is going to be the City of Grand Rapids
+            Ottawa-Fulton Parking Ramp which costs $1.25 per half hour or $12
+            for the night if there is an event. A map to this ramp is below.
+          </p>
+          <a
+            class="button purple-inverted"
+            href="https://www.google.com/maps/place/City+of+Grand+Rapids+Ottawa-Fulton+Parking+Ramp/@42.9637758,-85.6733651,17z/data=!4m12!1m6!3m5!1s0x8819adc45b3d3447:0x98bdfec30061e6a8!2sOttawa-Fulton+Parking+Ramp!8m2!3d42.9637758!4d-85.6711764!3m4!1s0x0:0x6772261ee0cf063!8m2!3d42.9633497!4d-85.6703903"
+            target="_blank"
+            ><i class="fas fa-map-marker-alt"></i><span>Map</span></a
+          >
+        </div>
+        <div class="column pink-background">
+          <h2>Guests</h2>
+          <p class="left-align">
+            Feel free to bring a guest to our wedding celebration! Please
+            include their name in the
+            <a href="#rsvp" class="dark-link">RSVP form</a> below.
+          </p>
+        </div>
+        <div class="column red-background">
+          <h2>Kids</h2>
+          <p class="left-align">
+            Unfortunately, kids are not able to attend our wedding celebration.
+            The bar only permits 21 and over.
+          </p>
+        </div>
+        <div class="column orange-background">
+          <h2>Food & Drink</h2>
+          <p class="left-align">
+            We will have buffet style food, so please fill out the
+            <a href="#rsvp" class="dark-link">RSVP form</a> along with any
+            allergy or dietary restrictions so that we can accommodate you. We
+            will have an open bar until 11:00 PM.
           </p>
         </div>
       </div>
@@ -123,33 +188,37 @@
       <p>Some recommendations for booking flights and accommodations.</p>
       <div class="row">
         <div class="column purple-outline">
-          <img src="assets\images\__.png" class="icon" alt="" />
+          <img src="assets\images\Hotel.png" class="icon" alt="" />
           <h2>Hotels</h2>
           <h3>
-            Courtyard by Marriott Downtown<br />11 Monroe Ave NW<br />Grand Rapids, MI 49503
+            Courtyard by Marriott Downtown<br />11 Monroe Ave NW<br />Grand
+            Rapids, MI 49503
           </h3>
-          <p>
-            We have reserved a block of rooms at the Courtyard by Marriott Downtown for a discounted rate. 
-            <br />
+          <p class="left-align">
+            We have reserved a block of rooms at the Courtyard by Marriott
+            Downtown for a discounted rate. You can
             <a
               href="https://book.passkey.com/e/50085058?utm_source=3416832&utm_medium=email&utm_campaign=286198213&trkid=533515908&linkid=2224615188"
               target="_blank"
-              >Book room online.</a
+              >book the room online</a
             >
+            or if you prefer to book via phone, call 877-901-6632 and use group
+            name <strong>Stevenson-Gosser Wedding</strong>.
             <br />
             <br />
-            If you prefer to book via phone, call 877-901-6632 and use group name <strong>Stevenson-Gosser Wedding</strong>.
-            <br />
-            <br />
-            <strong>Note that you have until May 6 to book a room at the discounted rate.</strong>
+            <strong
+              >You have until May 6 to book a room at the discounted
+              rate.</strong
+            >
           </p>
         </div>
         <div class="column pink-outline">
           <img src="assets\images\Airplane.png" class="icon" alt="icon" />
           <h2>Flights</h2>
           <h3>Grand Rapids, MI<br />GRR</h3>
-          <p>
-            Gerald R Ford International Airport (GRR) is where you should fly into. We like to use
+          <p class="left-align">
+            Gerald R Ford International Airport (GRR) is where you should fly
+            into. We like to use
             <a
               href="https://www.google.com/flights?hl=en#flt=/m/0ftxw.GRR.2020-06-05*GRR./m/0ftxw.2020-06-07;c:USD;e:1;sd:1;t:f"
               target="_blank"
@@ -159,10 +228,14 @@
           </p>
         </div>
         <div class="column orange-outline">
-          <img src="assets\images\___.png" class="icon" alt="" />
+          <img src="assets\images\Car.png" class="icon" alt="" />
           <h2>Uber / Lyft</h2>
-          <p>
-            We recommend using <a href="https://www.uber.com/" target="_blank">Uber</a> or <a href="https://www.lyft.com" target="_blank">Lyft</a> rather than renting a car. It shouldn’t be difficult to find rides from the airport to downtown.
+          <p class="left-align">
+            We recommend using
+            <a href="https://m.uber.com/" target="_blank">Uber</a> or
+            <a href="https://www.lyft.com" target="_blank">Lyft</a> rather than
+            renting a car. It shouldn’t be difficult to find rides from the
+            airport to downtown.
           </p>
         </div>
       </div>
