auto format the file
use vs code to format the file nicely

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
             alt=""
           />
           <h2>New Holland</h2>
-          <a 
-            href="https://www.newhollandbrew.com/location/grand-rapids/" 
+          <a
+            href="https://www.newhollandbrew.com/location/grand-rapids/"
             target="_blank"
             class="flex-grow"
             >www.newhollandbrew.com</a
@@ -287,9 +287,10 @@
           >
         </div>
         <div class="column red-outline">
-          <img  
-            src="assets\images\jonas-jacobsson-p2KA3Q2lfSw-unsplash.jpg" 
-            alt="" />
+          <img
+            src="assets\images\jonas-jacobsson-p2KA3Q2lfSw-unsplash.jpg"
+            alt=""
+          />
           <h2>Jolly Pumpkin</h2>
           <a
             href="https://www.jollypumpkin.com/jp/grand-rapids-brewery"
@@ -305,9 +306,10 @@
           >
         </div>
         <div class="column orange-outline">
-          <img  
-            src="assets\images\kyryll-ushakov-flENqflm6xU-unsplash.jpg" 
-            alt="" />
+          <img
+            src="assets\images\kyryll-ushakov-flENqflm6xU-unsplash.jpg"
+            alt=""
+          />
           <h2>Brewery Vivant</h2>
           <a
             href="https://www.breweryvivant.com/"
@@ -326,10 +328,7 @@
       <h3>Restaurants</h3>
       <div class="row">
         <div class="column red-outline">
-          <img
-            src="assets\images\littlebirdgr.jpg"
-            alt=""
-          />
+          <img src="assets\images\littlebirdgr.jpg" alt="" />
           <h2>Little Bird</h2>
           <a
             href="https://www.thelittlebirdgr.com/"
@@ -345,9 +344,9 @@
           >
         </div>
         <div class="column orange-outline">
-          <img 
-            src="assets\images\scott-warman-CPuegm6VZ6U-unsplash.jpg" 
-            alt="" 
+          <img
+            src="assets\images\scott-warman-CPuegm6VZ6U-unsplash.jpg"
+            alt=""
           />
           <h2>New Hotel Mertens</h2>
           <a
@@ -369,7 +368,8 @@
             alt=""
           />
           <h2>Rockwell Republic</h2>
-          <a href="https://rockwellrepublic.com/" 
+          <a
+            href="https://rockwellrepublic.com/"
             target="_blank"
             class="flex-grow"
             >rockwellrepublic.com</a
@@ -382,9 +382,9 @@
           >
         </div>
         <div class="column purple-outline">
-          <img 
-            src="assets\images\maddi-bazzocco-cVmNIJCa1XA-unsplash.jpg" 
-            alt="" 
+          <img
+            src="assets\images\maddi-bazzocco-cVmNIJCa1XA-unsplash.jpg"
+            alt=""
           />
           <h2>San Chez Bistro</h2>
           <a
@@ -408,10 +408,7 @@
             alt=""
           />
           <h2>Donkey Taqueria</h2>
-          <a
-            href="https://www.donkeygr.com/"
-            target="_blank"
-            class="flex-grow"
+          <a href="https://www.donkeygr.com/" target="_blank" class="flex-grow"
             >www.donkeygr.com</a
           >
           <a
@@ -422,9 +419,9 @@
           >
         </div>
         <div class="column purple-outline">
-          <img 
-            src="assets\images\emerson-vieira-lanootd2FcU-unsplash.jpg" 
-            alt="" 
+          <img
+            src="assets\images\emerson-vieira-lanootd2FcU-unsplash.jpg"
+            alt=""
           />
           <h2>Butcher's Union</h2>
           <a
@@ -446,7 +443,8 @@
             alt=""
           />
           <h2>Bistro Bella Vita</h2>
-          <a href="https://bistrobellavita.com/" 
+          <a
+            href="https://bistrobellavita.com/"
             target="_blank"
             class="flex-grow"
             >bistrobellavita.com</a
@@ -459,15 +457,9 @@
           >
         </div>
         <div class="column orange-outline">
-          <img 
-            src="assets\images\igor-rand-4LZPmKbgQiQ-unsplash.jpg" 
-            alt="" 
-          />
+          <img src="assets\images\igor-rand-4LZPmKbgQiQ-unsplash.jpg" alt="" />
           <h2>The Green Well</h2>
-          <a
-            href="https://thegreenwell.com/"
-            target="_blank"
-            class="flex-grow"
+          <a href="https://thegreenwell.com/" target="_blank" class="flex-grow"
             >thegreenwell.com</a
           >
           <a
@@ -505,7 +497,8 @@
             alt=""
           />
           <h2>Downtown Market</h2>
-          <a href="http://downtownmarketgr.com/" 
+          <a
+            href="http://downtownmarketgr.com/"
             target="_blank"
             class="flex-grow"
             >downtownmarketgr.com</a
@@ -518,12 +511,10 @@
           >
         </div>
         <div class="column pink-outline">
-          <img
-            src="assets\images\ian-dooley-ZLBzMGle-nE-unsplash.jpg"
-            alt=""
-          />
+          <img src="assets\images\ian-dooley-ZLBzMGle-nE-unsplash.jpg" alt="" />
           <h2>Grand Rapids Art Museum</h2>
-          <a href="https://www.artmuseumgr.org/" 
+          <a
+            href="https://www.artmuseumgr.org/"
             target="_blank"
             class="flex-grow"
             >www.artmuseumgr.org</a
@@ -536,12 +527,12 @@
           >
         </div>
         <div class="column purple-outline">
-          <img src="assets\images\sergio-alves-santos-OxKFC5u0980-unsplash.jpg" alt="" />
+          <img
+            src="assets\images\sergio-alves-santos-OxKFC5u0980-unsplash.jpg"
+            alt=""
+          />
           <h2>The B.O.B.</h2>
-          <a
-            href="http://www.thebob.com/"
-            target="_blank"
-            class="flex-grow"
+          <a href="http://www.thebob.com/" target="_blank" class="flex-grow"
             >www.thebob.com</a
           >
           <a
@@ -570,12 +561,18 @@
         <img class="slides" src="assets\images\italy.jpeg" />
         <img class="slides" src="assets\images\colliseum-italy.jpeg" />
         <img class="slides" src="assets\images\yosemite.jpeg" />
-        <img class="slides" src="assets\images\california-yosemite-mist-trail.jpeg" />
+        <img
+          class="slides"
+          src="assets\images\california-yosemite-mist-trail.jpeg"
+        />
         <img class="slides" src="assets\images\greece-ios.jpeg" />
         <img class="slides" src="assets\images\greece-santorini.jpeg" />
         <img class="slides" src="assets\images\dominican-republic.jpeg" />
         <img class="slides" src="assets\images\costa-rica.jpeg" />
-        <img class="slides" src="assets\images\costa-rica-engaged-sunset.jpeg" />
+        <img
+          class="slides"
+          src="assets\images\costa-rica-engaged-sunset.jpeg"
+        />
         <img class="slides" src="assets\images\msu.jpeg" />
         <img class="slides" src="assets\images\ncsu.jpeg" />
       </div>
@@ -586,7 +583,10 @@
       <div class="column no-padding">
         <h1>RSVP</h1>
       </div>
-      <p>Please RSVP here. If you are unsure if you have RSVP'd yet, no worries! Do it here (again)!</p>
+      <p>
+        Please RSVP here. If you are unsure if you have RSVP'd yet, no worries!
+        Do it here (again)!
+      </p>
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSfu1HIxNt-UAkg7zvdRAY83lc9DJJJgMmAS7mOHFaMrSnxqmg/viewform?embedded=true"
         width="640"
@@ -597,7 +597,7 @@
         >Loading…</iframe
       >
     </div>
-    
+
     <div id="countdown" class="section light-background">
       <h1 class="header-background">Countdown</h1>
       <div class="column no-padding">
@@ -632,7 +632,8 @@
           <h3>Are Kids Invited?</h3>
           <h2>Answer</h2>
           <p>
-            We love your kids, but we really want our celebration to be your night off! We have a fun, boozy night planned for you.
+            We love your kids, but we really want our celebration to be your
+            night off! We have a fun, boozy night planned for you.
           </p>
         </div>
         <div class="column red-outline">
@@ -642,7 +643,9 @@
           </h3>
           <h2>Answer</h2>
           <p>
-            This is a fairly casual celebration. Please dress nice, but don’t worry about being too done up. We will be drinking and playing games all night. 
+            This is a fairly casual celebration. Please dress nice, but don’t
+            worry about being too done up. We will be drinking and playing games
+            all night.
           </p>
         </div>
         <div class="column pink-outline">
@@ -658,7 +661,10 @@
           <h3>Where/When did you get Married?</h3>
           <h2>Answer</h2>
           <p>
-            We are getting married in St Thomas, USVI on May 9, 2020! We wanted a small, private ceremony with the ability to celebrate with all of our friends and family after. We can’t wait to celebrate with all of you!
+            We are getting married in St Thomas, USVI on May 9, 2020! We wanted
+            a small, private ceremony with the ability to celebrate with all of
+            our friends and family after. We can’t wait to celebrate with all of
+            you!
           </p>
         </div>
       </div>
