update and add images

--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
       <h1 class="header-background white">Grand Rapids</h1>
       <div class="column no-padding">
         <h1>Grand Rapids</h1>
+        <img 
+          src="assets\images\Calder.png"
+          alt=""
+          class="icon"
+          style="padding: 0;"
+        />
       </div>
       <h3>Breweries</h3>
       <div class="row">
