add link for gr brew co and clarify the kids section

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
             alt=""
           />
           <p>
-            Grand Rapids Brewing Company<br />1 Ionia Ave SW<br />Grand Rapids,
-            MI 49503
+            <a href="https://www.grbrewingcompany.com/welcome" target="_blank"
+              >Grand Rapids Brewing Company</a
+            ><br />1 Ionia Ave SW<br />Grand Rapids, MI 49503
           </p>
         </div>
       </div>
@@ -639,7 +640,8 @@
           <h2>Answer</h2>
           <p>
             We love your kids, but we really want our celebration to be your
-            night off! We have a fun, boozy night planned for you.
+            night off! We have a fun, boozy night planned for you. Also, the bar
+            is 21 and over.
           </p>
         </div>
         <div class="column red-outline">
