add a faq for covid-19
since we are already getting questions

--- a/index.html
+++ b/index.html
@@ -634,41 +634,59 @@
       </div>
       <p>Frequently asked questions</p>
       <div class="row">
+        <div class="column red-outline">
+          <h2>Question</h2>
+          <h3>What if COVID-19 is still an issue in June?</h3>
+          <h2>Answer</h2>
+          <p  class="left-align">
+            We are very aware of the issue of COVID-19 and are monitoring it closely. We will keep you all posted if this event has to be rescheduled. Hopefully it will not come to that, but we are prepared just in case. Thank you for your support and please let us know if you feel any concern about attending due to the coronavirus.
+          </p>
+        </div>
         <div class="column orange-outline">
           <h2>Question</h2>
           <h3>Are Kids Invited?</h3>
           <h2>Answer</h2>
-          <p>
+          <p  class="left-align">
             We love your kids, but we really want our celebration to be your
             night off! We have a fun, boozy night planned for you. Also, the bar
             is 21 and over.
           </p>
         </div>
-        <div class="column red-outline">
+        <div class="column pink-outline">
           <h2>Question</h2>
           <h3>
             What is the dress code?
           </h3>
           <h2>Answer</h2>
-          <p>
+          <p  class="left-align">
             This is a fairly casual celebration. Please dress nice, but don’t
             worry about being too done up. We will be drinking and playing games
             all night.
           </p>
         </div>
-        <div class="column pink-outline">
+      </div>
+      <div class="row">
+        <div class="column purple-outline">
           <h2>Question</h2>
           <h3>Can I bring a date?</h3>
           <h2>Answer</h2>
-          <p>
-            Yes, please feel free to bring a guest.
+          <p class="left-align">
+            Yes, please feel free to bring a guest. Please include their name in the <a href="#rsvp">RSVP</a> form above.
           </p>
         </div>
-        <div class="column purple-outline">
+        <div class="column red-outline">
+          <h2>Question</h2>
+          <h3>Will there be food?</h3>
+          <h2>Answer</h2>
+          <p  class="left-align">
+            Yes! We will have an array of options buffet style. If you have any allergies or dietary restrictions, please note them in the <a href="#rsvp">RSVP</a> form above.
+          </p>
+        </div>
+        <div class="column orange-outline">
           <h2>Question</h2>
           <h3>Where/When did you get Married?</h3>
           <h2>Answer</h2>
-          <p>
+          <p  class="left-align">
             We are getting married in St Thomas, USVI on May 9, 2020! We wanted
             a small, private ceremony with the ability to celebrate with all of
             our friends and family after. We can’t wait to celebrate with all of
