update footer look

--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
       <p>
         Graphic Design by
         <a href="https://www.amandawestra.co/" target="_blank">Amanda Westra</a>
+        & Kelsie Stevenson
       </p>
     </div>
     <footer>
